# tp_lista_RV

./: CMakeLists.txt  datosParaSimular.c  estudiante.c  estudiantePorNombre.c  lista.c  listaOrdenada.c  materia.c  materiaEstudiante.c  readme.md  sistema.c
